Fixed tasks list overflow on projects#show

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,6 +111,7 @@ section {
   width: 31.2%;
   padding: 1%;
   height: 400px;
+  overflow: auto;
 }
 
 .status-pane ul {
